--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,12 @@ jobs:
       - name: 检出仓库
         uses: actions/checkout@v4
 
+      - name: Install pandoc
+        run: |
+          cd /tmp
+          wget -c https://github.com/jgm/pandoc/releases/download/2.14.0.3/pandoc-2.14.0.3-1-amd64.deb
+          sudo dpkg -i pandoc-2.14.0.3-1-amd64.deb
+
       - name: 安装Node.js 18
         uses: actions/setup-node@v4
         with:
@@ -29,8 +35,11 @@ jobs:
 
       - name: 安装相关依赖
         working-directory: publish
-        run: npm install --silent --no-fund
-
+        run: |
+          npm install --silent --no-fund
+          npm un hexo-renderer-marked --save
+          npm i hexo-renderer-markdown-it-plus --save
+          
       - name: 复制博客文件
         run: |
           cd publish
