--- a/publish/_config.fluid.yml
+++ b/publish/_config.fluid.yml
@@ -722,11 +722,11 @@ post:
   # 评论插件
   # Comment plugin
   comments:
-    enable: false
+    enable: true
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis | giscus | discuss
-    type: disqus
+    type: giscus
 
 
 #---------------------------
@@ -866,17 +866,17 @@ cusdis:
 # 基于 GitHub Discussions，类似于 Utterances
 # Based on GitHub Discussions, similar to Utterances
 # See: https://giscus.app/
-giscus:
-  repo:
-  repo-id:
-  category:
-  category-id:
+giscus:  # 从https://maling.io/posts/get-github-repo-id/获取
+  repo: buttering/EasyBlog
+  repo-id: R_kgDOLtp82A
+  category: Announcements
+  category-id: DIC_kwDOLtp82M4CfIk6
   theme-light: light
   theme-dark: dark
   mapping: pathname
   reactions-enabled: 1
   emit-metadata: 0
-  input-position: top
+  input-position: bottom
   lang: zh-CN
 
 # Discuss
