网站个性化

--- a/publish/_config.yml
+++ b/publish/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: "Buttering's Blog"
+subtitle: "西郊有密林 助君出重围"
 description: ''
 keywords:
-author: John Doe
+author: Buttering
 language: zh-CN
 timezone: ''
 
