--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "repository_url": "https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures",
-  "local_file_path": "E:/desktop/blog",
+  "local_file_path": "/Users/buttering/GolandProjects/EasyBlog/tmp",
   "update_file_hash": "669ba7c00eb5d68928ff05646a13a572"
 }
