整理博客，添加目录信息

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "repository_url": "https://raw.githubusercontent.com/buttering/EasyBlogs/master/asset/pictures",
-  "local_file_path": "/Users/buttering/GolandProjects/EasyBlog/tmp",
+  "local_file_path": "/mnt/e/OneDrive/桌面/blog/blog4",
   "update_file_hash": "669ba7c00eb5d68928ff05646a13a572"
 }
